Fixes: Height responsivity on iphone

--- a/src/index.css
+++ b/src/index.css
@@ -275,6 +275,7 @@ Iphone: 402px x 873px
         margin-top: 132px;
 
         max-width: 330px;
+        height: 741px;
     }
 
     .container-content-porto {
